syntax = 'proto3';

package pysrbup;

service Backup {
    rpc UploadBackup(UploadBackupRequest) returns (UploadBackupResponse);
    rpc GetMissingCodes(GetMissingCodesRequest) returns (GetMissingCodesResponse);
    rpc PushBlocks(PushBlocksRequest) returns (PushBlocksResponse);
    rpc GetBackup(GetBackupRequest) returns (GetBackupResponse);   
    rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse);
    rpc DeleteBackup(DeleteBackupRequest) returns (DeleteBackupResponse);
    rpc UpdateDict(UpdateDictRequest) returns (UpdateDictResponse);
    rpc ListBackups(ListBackupsRequest) returns (ListBackupsResponse);
}


message UploadBackupRequest {
    string id = 1;
    bytes data = 2;
}

message UploadBackupResponse {}

message GetMissingCodesRequest {
    repeated string codes = 1;
}

message GetMissingCodesResponse {
    repeated string codes = 1;
}

message PushBlocksRequest {
    repeated Block blocks = 1;
}

message PushBlocksResponse {}

message GetBackupRequest {
    string id = 1;
}

message GetBackupResponse {
    bytes data = 1;
}

message GetBlocksRequest {
    repeated string codes = 1;
}

message GetBlocksResponse {
    repeated Block blocks = 1;
}

message DeleteBackupRequest {
    string id = 1;
}

message DeleteBackupResponse {
    bytes data = 1;
}

message UpdateDictRequest {
    repeated string codes = 1;
}

message UpdateDictResponse {}

message ListBackupsRequest {}

message ListBackupsResponse {
    repeated Row rows = 1;
}

message Block {
    string code = 1;
    bytes data = 2;
}

message Row {
    repeated string col = 1;
}
